@@ -6,11 +6,13 @@ import com.udacity.jdnd.course3.critter.entity.Customers;
 import com.udacity.jdnd.course3.critter.entity.Pet;
 import com.udacity.jdnd.course3.critter.repository.CustomersRepository;
 import com.udacity.jdnd.course3.critter.repository.PetRepository;
-import jakarta.transaction.Transactional;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import javax.transaction.Transactional;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -39,11 +41,11 @@ public class PetService {
     }
 
     public List<Pet> getAllPets(){
-        return ((List<Pet>)petRepository.findAll().stream().toList());
+        return ((List<Pet>)petRepository.findAll().stream().collect(Collectors.toList()));
     }
 
     public List<Pet> getPetsByOwner(Long ownerId){
-        return(petRepository.getPetByCustomerId(ownerId)).stream().toList();
+        return(petRepository.getPetByCustomerId(ownerId)).stream().collect(Collectors.toList());
 
     }
 
